styles(chat): a new chat UI

--- a/bigbluebutton-html5/public/locales/en.json
+++ b/bigbluebutton-html5/public/locales/en.json
@@ -29,8 +29,8 @@
     "app.chat.breakoutDurationUpdated": "Breakout time is now {0} minutes",
     "app.chat.breakoutDurationUpdatedModerator": "Breakout rooms time is now {0} minutes, and a notification has been sent.",
     "app.chat.emptyLogLabel": "Chat log empty",
-    "app.chat.away": "is away",
-    "app.chat.notAway": "is back",
+    "app.chat.away": "{user} is away",
+    "app.chat.notAway": "{user} is back online",
     "app.chat.clearPublicChatMessage": "The public chat history was cleared by a moderator",
     "app.chat.multi.typing": "Multiple users are typing",
     "app.chat.someone.typing": "Someone is typing",
@@ -49,6 +49,12 @@
     "app.chat.toolbar.reactions.youLabel": "you",
     "app.chat.toolbar.reactions.andLabel": "and",
     "app.chat.toolbar.reactions.findReactionButtonLabel": "Find a reaction",
+    "app.chat.toolbar.edit.editing": "Editing message",
+    "app.chat.toolbar.edit.cancel": "Press {key} to cancel.",
+    "app.chat.toolbar.edit.edited": "Edited",
+    "app.chat.toolbar.delete.cancelLabel": "Cancel",
+    "app.chat.toolbar.delete.confirmationTitle": "Are you sure?",
+    "app.chat.toolbar.delete.confirmationDescription": "This action is permanent, you will not be able to access this message again.",
     "app.timer.toolTipTimerStopped": "The timer has stopped.",
     "app.timer.toolTipTimerRunning": "The timer is running.",
     "app.timer.toolTipStopwatchStopped": "The stopwatch has stopped.",
